presto (2+git20160604-1kern2) xenial; urgency=medium

  * add  tempo, numpy, scipy & matplotlib dependencies


 -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Thu, 21 Jul 2016 14:42:04 +0200

presto (2+git20160604-1kern1) xenial; urgency=medium

  * add gfortran dependency

 -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Thu, 07 Jul 2016 14:00:58 +0000

presto (2+git20160604-1) xenial; urgency=medium

  * Initial release (Closes: #nnnn)

 -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Thu, 07 Jul 2016 10:42:43 +0000