@@ -1,2 +1,0 @@
-lib/* usr/lib/
-bin/* usr/bin/
