@@ -1,6 +1,7 @@
 presto (2+git20160604-1kern2) xenial; urgency=medium
 
-  * add  tempo, numpy, scipy & matplotlib dependencies
+  * add tempo, numpy, scipy & matplotlib dependencies
+  * install python files, made python-presto package
 
 
  -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Thu, 21 Jul 2016 14:42:04 +0200
